# BackendChallenge

./: .envrc  .gitignore  Makefile  README.md  notes.md  pyproject.toml
.github/install_python_env/: action.yml
.github/workflows/: CI.yml
api/: api_server.py  cli.py  create_app.py
api/applications/: api_server.py
api/cli/: cli.py
api/components/: application.py  file_vehicle_store.py  vehicle_store.py
api/core/: challenge_api.py
api/handlers/backend/: challenge.py
api/models/: vehicle.py
api/utils/: api_decorators.py  error_handlers.py
tests/: conftest.py
tests/acceptance/: test_application.py
tests/example_requests/: invalid_vehicle_features_post.json
tests/unit/: conftest.py
tests/unit/components/: test_file_vehicle_store.py
tests/unit/handlers/backend/: test_challenge.py
