[tool.poetry]
name = "api"
version = "0.1.0"
description = "Backend challenge solution for CarCutter"
authors = ["Attila Dudas <dudasa7@gmail.com>"]
license = "All rights reserved."
readme = "README.md"

[tool.poetry.scripts]
cli = 'api.cli.cli:cli'

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.7"
flask = "^2.1.3"
flask-cors = "^4.0.0"
pydantic = "^2.0.0"
orjson = "^3.0.0"

[tool.poetry.group.dev.dependencies]
black = "22.3.0"
httpx = "^0.24.0"
mypy = "^1.0.0"
pytest = "^7.0.0"
pytest-cov = "^4.1.0"
types-flask-cors = "^3.0.0"

[tool.pytest.ini_options]
addopts = [
    "--cov=api"
]


[tool.black]
line-length = 140

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
